welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:7: error: '(' expected but '{' found.
	{
        ^posNeg:10: error: illegal start of simple expression
}
^